trunk/language/bison.output
Terminals which are not used

   TOKEN_ARRAY


Grammar

    0 $accept: program $end

    1 program: global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions

    2 global_variables: /* empty */
    3                 | global_variables local_variables

    4 local_variables: simple_type names TOKEN_SEMICOLON
    5                | complex_type names TOKEN_SEMICOLON

    6 simple_type: TOKEN_VAR_REAL
    7            | TOKEN_VAR_INT
    8            | TOKEN_LOCATION
    9            | TOKEN_OBJECT

   10 complex_type: simple_type ranges

   11 ranges: TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   12       | ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

   13 names: TOKEN_IDENTIFIER
   14      | TOKEN_IDENTIFIER TOKEN_ASSIGN number
   15      | names TOKEN_COMMA TOKEN_IDENTIFIER
   16      | names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

   18 values: number
   19       | TOKEN_IDENTIFIER
   20       | values TOKEN_COMMA TOKEN_IDENTIFIER
   21       | values TOKEN_COMMA number

   22 declare_functions: /* empty */
   23                  | declare_function_

   24 function_header: TOKEN_FUNCTION TOKEN_IDENTIFIER

   25 declare_function_: function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   26                  | declare_function_ function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   27                  | function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions
   28                  | declare_function_ function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

   29 number: TOKEN_OPER_SIGNADD TOKEN_REAL
   30       | TOKEN_OPER_SIGNADD TOKEN_UINT
   31       | TOKEN_REAL
   32       | TOKEN_UINT

   33 block_of_instructions: TOKEN_BEGIN TOKEN_END
   34                      | TOKEN_BEGIN TOKEN_SEMICOLON TOKEN_END
   35                      | TOKEN_BEGIN commands TOKEN_END

   36 commands: matched
   37         | commands matched
   38         | unmatched
   39         | commands unmatched

   40 command: TOKEN_FOR TOKEN_LPAR init TOKEN_SEMICOLON expression_bool TOKEN_SEMICOLON simple_command TOKEN_RPAR block_of_instructions
   41        | TOKEN_DO block_of_instructions TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR TOKEN_SEMICOLON
   42        | TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   43        | TOKEN_RETURN expression TOKEN_SEMICOLON
   44        | TOKEN_RETURN TOKEN_SEMICOLON
   45        | TOKEN_BREAK TOKEN_SEMICOLON
   46        | local_variables
   47        | simple_command TOKEN_SEMICOLON

   48 simple_command: assign
   49               | variable TOKEN_PLUSPLUS
   50               | variable TOKEN_MINUSMINUS
   51               | variable

   52 assign: variable_left TOKEN_ASSIGN variable
   53       | variable_left TOKEN_ASSIGN number

   54 variable_left: TOKEN_IDENTIFIER
   55              | TOKEN_IDENTIFIER array_access

   56 call_fce: TOKEN_IDENTIFIER TOKEN_LPAR call_parameters TOKEN_RPAR

   57 call_parameters: expression
   58                | /* empty */
   59                | call_parameters TOKEN_COMMA expression

   60 matched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE matched
   61        | command
   62        | block_of_instructions

   63 unmatched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   64          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR command
   65          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE unmatched

   66 init: TOKEN_VAR_INT TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   67     | TOKEN_VAR_REAL TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   68     | TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   69     | TOKEN_IDENTIFIER TOKEN_LSBRA expression TOKEN_RSBRA TOKEN_ASSIGN expression

   70 variable: TOKEN_IDENTIFIER
   71         | TOKEN_IDENTIFIER array_access
   72         | call_fce
   73         | variable TOKEN_DOT TOKEN_IDENTIFIER
   74         | variable TOKEN_DOT call_fce

   75 array_access: TOKEN_LSBRA exps TOKEN_RSBRA
   76             | array_access TOKEN_LSBRA exps TOKEN_RSBRA

   77 exps: expression
   78     | exps TOKEN_COMMA expression

   79 expression_base: variable
   80                | number
   81                | variable TOKEN_MINUSMINUS
   82                | variable TOKEN_PLUSPLUS
   83                | TOKEN_LPAR expression TOKEN_RPAR

   84 expression_mul: expression_base
   85               | expression_mul TOKEN_OPER_MUL expression_base

   86 expression_add: expression_mul
   87               | expression_add TOKEN_OPER_SIGNADD expression_mul

   88 expression: expression_add

   89 expression_bool_base: expression
   90                     | expression TOKEN_OPER_REL expression

   91 expression_bool_or: expression_bool_base
   92                   | expression_bool_or TOKEN_BOOL_OR TOKEN_LPAR expression_bool TOKEN_RPAR

   93 expression_bool: expression_bool_or
   94                | expression_bool TOKEN_BOOL_AND expression_bool_or


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_MAIN (258) 1
TOKEN_LOCATION (259) 8
TOKEN_OBJECT (260) 9
TOKEN_VAR_REAL (261) 6 67
TOKEN_VAR_INT (262) 7 66
TOKEN_FUNCTION (263) 24
TOKEN_ARRAY (264)
TOKEN_IF (265) 60 63 64 65
TOKEN_ELSE (266) 60 65
TOKEN_WHILE (267) 41 42
TOKEN_DO (268) 41
TOKEN_FOR (269) 40
TOKEN_BOOL_AND (270) 94
TOKEN_BOOL_OR (271) 92
TOKEN_RETURN (272) 43 44
TOKEN_BREAK (273) 45
TOKEN_SEMICOLON (274) 4 5 34 40 41 43 44 45 47
TOKEN_DOT (275) 73 74
TOKEN_COMMA (276) 15 16 17 20 21 59 78
TOKEN_LPAR (277) 1 25 26 27 28 40 41 42 56 60 63 64 65 83 92
TOKEN_RPAR (278) 1 25 26 27 28 40 41 42 56 60 63 64 65 83 92
TOKEN_LSBRA (279) 11 12 69 75 76
TOKEN_RSBRA (280) 11 12 69 75 76
TOKEN_ASSIGN (281) 14 16 17 52 53 66 67 68 69
TOKEN_BEGIN (282) 17 33 34 35
TOKEN_END (283) 17 33 34 35
TOKEN_IDENTIFIER (284) 13 14 15 16 17 19 20 24 54 55 56 66 67 68 69
    70 71 73
TOKEN_UINT (285) 11 12 30 32
TOKEN_REAL (286) 29 31
TOKEN_OPER_REL (287) 90
TOKEN_OPER_SIGNADD (288) 29 30 87
TOKEN_OPER_MUL (289) 85
TOKEN_PLUSPLUS (290) 49 82
TOKEN_MINUSMINUS (291) 50 81


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
global_variables (39)
    on left: 2 3, on right: 1 3
local_variables (40)
    on left: 4 5, on right: 3 46
simple_type (41)
    on left: 6 7 8 9, on right: 4 10
complex_type (42)
    on left: 10, on right: 5
ranges (43)
    on left: 11 12, on right: 10 12
names (44)
    on left: 13 14 15 16 17, on right: 4 5 15 16 17 25 26
values (45)
    on left: 18 19 20 21, on right: 17 20 21
declare_functions (46)
    on left: 22 23, on right: 1
function_header (47)
    on left: 24, on right: 25 26 27 28
declare_function_ (48)
    on left: 25 26 27 28, on right: 23 26 28
number (49)
    on left: 29 30 31 32, on right: 14 16 18 21 53 80
block_of_instructions (50)
    on left: 33 34 35, on right: 1 25 26 27 28 40 41 42 62 63
commands (51)
    on left: 36 37 38 39, on right: 35 37 39
command (52)
    on left: 40 41 42 43 44 45 46 47, on right: 61 64
simple_command (53)
    on left: 48 49 50 51, on right: 40 47
assign (54)
    on left: 52 53, on right: 48
variable_left (55)
    on left: 54 55, on right: 52 53
call_fce (56)
    on left: 56, on right: 72 74
call_parameters (57)
    on left: 57 58 59, on right: 56 59
matched (58)
    on left: 60 61 62, on right: 36 37 60 65
unmatched (59)
    on left: 63 64 65, on right: 38 39 65
init (60)
    on left: 66 67 68 69, on right: 40
variable (61)
    on left: 70 71 72 73 74, on right: 49 50 51 52 73 74 79 81 82
array_access (62)
    on left: 75 76, on right: 55 71 76
exps (63)
    on left: 77 78, on right: 75 76 78
expression_base (64)
    on left: 79 80 81 82 83, on right: 84 85
expression_mul (65)
    on left: 84 85, on right: 85 86 87
expression_add (66)
    on left: 86 87, on right: 87 88
expression (67)
    on left: 88, on right: 43 57 59 66 67 68 69 77 78 83 89 90
expression_bool_base (68)
    on left: 89 90, on right: 91
expression_bool_or (69)
    on left: 91 92, on right: 92 93 94
expression_bool (70)
    on left: 93 94, on right: 40 41 42 60 63 64 65 92 94


state 0

    0 $accept: . program $end
    1 program: . global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions
    2 global_variables: .
    3                 | . global_variables local_variables

    $default  reduce using rule 2 (global_variables)

    program           go to state 1
    global_variables  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: global_variables . declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions
    3 global_variables: global_variables . local_variables
    4 local_variables: . simple_type names TOKEN_SEMICOLON
    5                | . complex_type names TOKEN_SEMICOLON
    6 simple_type: . TOKEN_VAR_REAL
    7            | . TOKEN_VAR_INT
    8            | . TOKEN_LOCATION
    9            | . TOKEN_OBJECT
   10 complex_type: . simple_type ranges
   22 declare_functions: .  [TOKEN_MAIN]
   23                  | . declare_function_
   24 function_header: . TOKEN_FUNCTION TOKEN_IDENTIFIER
   25 declare_function_: . function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   26                  | . declare_function_ function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   27                  | . function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions
   28                  | . declare_function_ function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LOCATION  shift, and go to state 4
    TOKEN_OBJECT    shift, and go to state 5
    TOKEN_VAR_REAL  shift, and go to state 6
    TOKEN_VAR_INT   shift, and go to state 7
    TOKEN_FUNCTION  shift, and go to state 8

    $default  reduce using rule 22 (declare_functions)

    local_variables    go to state 9
    simple_type        go to state 10
    complex_type       go to state 11
    declare_functions  go to state 12
    function_header    go to state 13
    declare_function_  go to state 14


state 3

    0 $accept: program $end .

    $default  accept


state 4

    8 simple_type: TOKEN_LOCATION .

    $default  reduce using rule 8 (simple_type)


state 5

    9 simple_type: TOKEN_OBJECT .

    $default  reduce using rule 9 (simple_type)


state 6

    6 simple_type: TOKEN_VAR_REAL .

    $default  reduce using rule 6 (simple_type)


state 7

    7 simple_type: TOKEN_VAR_INT .

    $default  reduce using rule 7 (simple_type)


state 8

   24 function_header: TOKEN_FUNCTION . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 15


state 9

    3 global_variables: global_variables local_variables .

    $default  reduce using rule 3 (global_variables)


state 10

    4 local_variables: simple_type . names TOKEN_SEMICOLON
   10 complex_type: simple_type . ranges
   11 ranges: . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   12       | . ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   13 names: . TOKEN_IDENTIFIER
   14      | . TOKEN_IDENTIFIER TOKEN_ASSIGN number
   15      | . names TOKEN_COMMA TOKEN_IDENTIFIER
   16      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_LSBRA       shift, and go to state 16
    TOKEN_IDENTIFIER  shift, and go to state 17

    ranges  go to state 18
    names   go to state 19


state 11

    5 local_variables: complex_type . names TOKEN_SEMICOLON
   13 names: . TOKEN_IDENTIFIER
   14      | . TOKEN_IDENTIFIER TOKEN_ASSIGN number
   15      | . names TOKEN_COMMA TOKEN_IDENTIFIER
   16      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_IDENTIFIER  shift, and go to state 17

    names  go to state 20


state 12

    1 program: global_variables declare_functions . TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_MAIN  shift, and go to state 21


state 13

   25 declare_function_: function_header . TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   27                  | function_header . TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LPAR  shift, and go to state 22


state 14

   23 declare_functions: declare_function_ .  [TOKEN_MAIN]
   24 function_header: . TOKEN_FUNCTION TOKEN_IDENTIFIER
   26 declare_function_: declare_function_ . function_header TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   28                  | declare_function_ . function_header TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_FUNCTION  shift, and go to state 8

    $default  reduce using rule 23 (declare_functions)

    function_header  go to state 23


state 15

   24 function_header: TOKEN_FUNCTION TOKEN_IDENTIFIER .

    $default  reduce using rule 24 (function_header)


state 16

   11 ranges: TOKEN_LSBRA . TOKEN_UINT TOKEN_RSBRA

    TOKEN_UINT  shift, and go to state 24


state 17

   13 names: TOKEN_IDENTIFIER .  [TOKEN_SEMICOLON, TOKEN_COMMA, TOKEN_RPAR]
   14      | TOKEN_IDENTIFIER . TOKEN_ASSIGN number

    TOKEN_ASSIGN  shift, and go to state 25

    $default  reduce using rule 13 (names)


state 18

   10 complex_type: simple_type ranges .  [TOKEN_IDENTIFIER]
   12 ranges: ranges . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 26

    $default  reduce using rule 10 (complex_type)


state 19

    4 local_variables: simple_type names . TOKEN_SEMICOLON
   15 names: names . TOKEN_COMMA TOKEN_IDENTIFIER
   16      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_SEMICOLON  shift, and go to state 27
    TOKEN_COMMA      shift, and go to state 28


state 20

    5 local_variables: complex_type names . TOKEN_SEMICOLON
   15 names: names . TOKEN_COMMA TOKEN_IDENTIFIER
   16      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | names . TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END

    TOKEN_SEMICOLON  shift, and go to state 29
    TOKEN_COMMA      shift, and go to state 28


state 21

    1 program: global_variables declare_functions TOKEN_MAIN . TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LPAR  shift, and go to state 30


state 22

   13 names: . TOKEN_IDENTIFIER
   14      | . TOKEN_IDENTIFIER TOKEN_ASSIGN number
   15      | . names TOKEN_COMMA TOKEN_IDENTIFIER
   16      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN number
   17      | . names TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGN TOKEN_BEGIN values TOKEN_END
   25 declare_function_: function_header TOKEN_LPAR . names TOKEN_RPAR block_of_instructions
   27                  | function_header TOKEN_LPAR . TOKEN_RPAR block_of_instructions

    TOKEN_RPAR        shift, and go to state 31
    TOKEN_IDENTIFIER  shift, and go to state 17

    names  go to state 32


state 23

   26 declare_function_: declare_function_ function_header . TOKEN_LPAR names TOKEN_RPAR block_of_instructions
   28                  | declare_function_ function_header . TOKEN_LPAR TOKEN_RPAR block_of_instructions

    TOKEN_LPAR  shift, and go to state 33


state 24

   11 ranges: TOKEN_LSBRA TOKEN_UINT . TOKEN_RSBRA

    TOKEN_RSBRA  shift, and go to state 34


state 25
